# ShadowPrompt

./: .gitignore  LICENSE  PROJECT_DOCUMENTATION.md  README.md  build_release.bat
.agent/: PROJECT_DOCUMENTATION.md  SETUP.md
.github/workflows/: check.yml  release.yml
shadow_prompt/: .gitignore  Cargo.toml  Launcher.bat  build.rs  build_err.txt  compile_errors2.txt  resources.rc  test_err.txt  test_hc.rs  test_overlay.rs  test_tabs.rs  test_ws.rs
shadow_prompt/.cargo/: config.toml
shadow_prompt/config/: config.example.toml  system_prompt.txt
shadow_prompt/data/rag_index/: index.json
shadow_prompt/docs/: DEVELOPMENT.md
shadow_prompt/docs/plans/: 2026-02-19-multi-format-question-support.md
shadow_prompt/knowledge/: password.md  sample.md
shadow_prompt/src/: capabilities.rs  clipboard.rs  color_picker.rs  config.rs  hotkey_recorder.rs  input.rs  llm.rs  logger.rs  main.rs  ocr.rs  setup.rs  tos_text.rs  ui.rs  utils.rs
shadow_prompt/src/auth/: google.rs  mod.rs
shadow_prompt/src/browser/: cookies.rs  injector.rs  mod.rs
shadow_prompt/src/knowledge/: mod.rs  rag.rs  search.rs
