[package]
name = "shadow_prompt"
version = "0.1.0"
edition = "2021"

[dependencies]
# Windows API for OCR and GUI
windows = { version = "0.58", features = [
    "Foundation",
    "Media_Ocr",
    "Globalization",
    "Graphics_Imaging",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
] }

# Input Hooks
rdev = "0.5"

# Clipboard
arboard = "3.4"

# Async & Networking
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# Data & Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
image = "0.25"
regex = "1.12.2"

# Embeddings & Vector DB (Commented out until Phase 3/4 to speed up initial build)
# ort = "2.0"
# lancedb = "0.6"
