[package]
name = "shadow_prompt"
version = "1.0.5"
edition = "2021"

[[bin]]
name = "Shadow_Prompt"
path = "src/main.rs"

[features]
default = []
debug = []

[dependencies]
# Windows API for OCR and GUI
windows = { version = "0.58", features = [
    "Foundation",
    "Media_Ocr",
    "Globalization",
    "Graphics_Imaging",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Console",
] }

# Input Hooks
rdev = "0.5"

# Clipboard
arboard = "3.4"

# Async & Networking
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# Data & Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
regex = "1"
# GUI dependencies
eframe = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
image = { version = "0.25", features = ["png"] }
oauth2 = { version = "4.4.2", features = ["reqwest"] }
open = "5.3.3"
url = "2.5.8"

# Build dependencies removed (Using local tools/protoc via Launcher.bat)


# Embeddings & Vector DB
fastembed = "4"
# lancedb & arrow removed for portability/simplicity


# File Scanning & Text Processing
glob = "0.3"
text-splitter = { version = "0.16", features = ["markdown"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
simplelog = "0.12"
chrono = "0.4"
zip = "2.1"

[build-dependencies]
embed-resource = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
